[tool.poetry]
name = "pydnevnikruapi"
version = "0.1.1"
description = ""
readme = "README.md"
authors = ["kesha1225 <samedov03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
